# mark-amp

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HISTORY.md  README.md  cppcheck-suppressions.txt  metadata.json  migrate_themes.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
archive/prototype/: App.tsx  constants.ts  index.html  package.json  types.ts
cmake/: generate_icns.sh
docs/: WINDOW_VISUAL_FX.md  api_reference.md  architecture.md  security_audit.md  sublime_performance_patterns.md  user_guide.md
docs/themes/: adwaita.ts  akira-neo-tokyo.ts  amiga.ts  beos.ts  blade-runner-neon.ts  brutalist-web.ts  cyberpunk.ts  darkmode.ts  dreamcast-swirl.ts  e-ink-notebook.ts  element-air.ts  element-earth.ts  element-ether.ts  element-fire.ts  element-water.ts  gameboy-classic.ts  gamecube-purple.ts  glowing-resin.ts  hacker.ts  index.test.ts  index.ts  industrial-warning.ts  ios17-frost.ts  liquid-metal.ts  macos.ts  material.ts  memphis-milano.ts  midnight.ts  mint.ts  monokai.ts  mpc-beat-machine.ts  neon-dreams.ts  neumorphism.ts  newwestern.ts  newwesternDark.ts  nord.ts  obsidian.ts  ocean.ts  one-dark-pro.ts  outrun.ts  (+29 more)
docs/v1_docs/: 00_master_plan.md  00_visual_fidelity_reference.md  accessibility_audit.md  build_guide.md  dependencies.md  phase_01_project_scaffolding.md  phase_02_code_quality_tooling.md  phase_03_dependency_management.md  phase_04_wxwidgets_integration.md  phase_05_application_architecture.md  phase_06_custom_window_chrome.md  phase_07_theme_data_model.md  phase_08_theme_engine.md  phase_09_layout_manager.md  phase_10_sidebar_file_tree.md  phase_11_file_system_integration.md  phase_12_text_editor_component.md  phase_13_markdown_parsing_engine.md  platform_notes.md  (+19 more)
resources/: config_defaults.json
scripts/: build_debug.sh  build_release.sh  bump_version.sh  clean.sh  format.sh  generate_icons.sh  lint.sh  package_linux.sh  package_macos.sh  package_macos_appstore.sh  package_windows.ps1  package_windows_msix.ps1  run_tests.sh  smoke_test.sh
src/: CMakeLists.txt  main.cpp  markamp.rc
src/app/: MarkAmpApp.cpp  MarkAmpApp.h
src/core/: AccessibilityManager.cpp  AccessibilityManager.h  AdaptiveThrottle.h  AppState.cpp  AppState.h  AsyncFileLoader.cpp  AsyncFileLoader.h  AsyncHighlighter.cpp  AsyncHighlighter.h  AsyncPipeline.h  BuiltInPlugins.cpp  BuiltInPlugins.h  BuiltInThemes.cpp  BuiltInThemes.h  BuiltinThemes.cpp  ChunkedStorage.h  CoalescingTask.h  Color.cpp  Color.h  Command.cpp  Command.h  CompilerHints.h  Config.cpp  Config.h  ContextKeyService.cpp  ContextKeyService.h  DecorationService.cpp  DecorationService.h  DiagnosticsService.cpp  DiagnosticsService.h  DocumentSnapshot.h  EncodingDetector.cpp  EncodingDetector.h  EnvironmentService.cpp  EnvironmentService.h  EventBus.cpp  EventBus.h  Events.h  ExtensionEnablement.cpp  ExtensionEnablement.h  (+126 more)
src/core/loader/: ThemeLoader.cpp  ThemeLoader.h
src/platform/: LinuxPlatform.cpp  LinuxPlatform.h  MacPlatform.h  MacPlatform.mm  PlatformAbstraction.h  WinPlatform.cpp  WinPlatform.h
src/rendering/: CaretOverlay.h  CodeBlockRenderer.cpp  CodeBlockRenderer.h  DirtyRegion.h  DoubleBufferedPaint.h  GlyphAdvanceCache.h  HitTestAccelerator.h  HtmlRenderer.cpp  HtmlRenderer.h  IncrementalLineWrap.h  MermaidBlockRenderer.cpp  MermaidBlockRenderer.h  PrefetchManager.h  ScrollBlit.h  SelectionPainter.h  ViewportCache.h
src/ui/: ActivityBar.cpp  ActivityBar.h  BevelPanel.cpp  BevelPanel.h  BreadcrumbBar.cpp  BreadcrumbBar.h  CommandPalette.cpp  CommandPalette.h  CustomChrome.cpp  CustomChrome.h  EditorPanel.cpp  EditorPanel.h  ExtensionCard.cpp  ExtensionCard.h  ExtensionDetailPanel.cpp  ExtensionDetailPanel.h  ExtensionsBrowserPanel.cpp  ExtensionsBrowserPanel.h  FileTreeCtrl.cpp  FileTreeCtrl.h  FloatingFormatBar.cpp  FloatingFormatBar.h  ImagePreviewPopover.cpp  ImagePreviewPopover.h  LayoutManager.cpp  LayoutManager.h  LinkPreviewPopover.cpp  LinkPreviewPopover.h  MainFrame.cpp  MainFrame.h  NotificationManager.cpp  NotificationManager.h  OutputPanel.cpp  OutputPanel.h  PreviewPanel.cpp  PreviewPanel.h  ProblemsPanel.cpp  ProblemsPanel.h  SettingsPanel.cpp  SettingsPanel.h  (+35 more)
tests/: CMakeLists.txt
tests/integration/: test_e2e.cpp  test_plan.md  test_preview_integration.cpp
tests/performance/: benchmark_suite.cpp  test_performance_regression.cpp
tests/unit/: test_accessibility.cpp  test_app_init.cpp  test_app_state.cpp  test_bevel_panel.cpp  test_builtin_plugin_behavior.cpp  test_builtin_plugins.cpp  test_command_history.cpp  test_config.cpp  test_context_keys.cpp  test_crash_regressions.cpp  test_cross_platform.cpp  test_custom_chrome.cpp  test_dependencies.cpp  test_editor.cpp  test_editor_controls.cpp  test_editor_enhancements.cpp  test_editor_qol.cpp  test_event_bus.cpp  test_eventbus_queuing.cpp  test_extension_integration.cpp  test_extension_management.cpp  test_extension_manifest.cpp  test_extension_scanner.cpp  test_extension_services.cpp  test_feature_guard_integration.cpp  test_feature_registry.cpp  test_file_system.cpp  test_file_tree.cpp  test_gallery_service.cpp  test_gfm_extensions.cpp  test_html_renderer.cpp  test_keyboard_navigation.cpp  test_layout.cpp  test_markdown_parser.cpp  test_mermaid_phase3.cpp  test_mermaid_renderer.cpp  test_p1_p4_services.cpp  test_panel_data_flow.cpp  test_perf_patterns_21_40.cpp  test_performance_infra.cpp  (+19 more)
themes/: adwaita.md  akira-neo-tokyo.md  amiga.md  beos.md  blade-runner-neon.md  brutalist-web.md  cyberpunk.md  darkmode.md  dreamcast-swirl.md  e-ink-notebook.md  element-air.md  element-earth.md  element-ether.md  element-fire.md  element-water.md  gameboy-classic.md  gamecube-purple.md  glowing-resin.md  hacker.md  industrial-warning.md  ios17-frost.md  liquid-metal.md  macos.md  material.md  memphis-milano.md  midnight.md  mint.md  monokai.md  mpc-beat-machine.md  neon-dreams.md  neumorphism.md  newwestern.md  newwesternDark.md  nord.md  obsidian.md  ocean.md  one-dark-pro.md  outrun.md  paper-cutout.md  ps5-orbit.md  (+24 more)
(+400 files in other folders)
